--- a/layouts/signos.xml
+++ b/layouts/signos.xml
@@ -16,7 +16,7 @@
         <dataInicio>21/05</dataInicio>
         <dataFim>20/06</dataFim>
         <signoNome>Gêmeos</signoNome>
-        <descricao>Signo de ar, é comunicativo e curioso.</descricao>
+        <descricao>Signo de ar, comunicativo e curioso.</descricao>
     </signo>
     <signo>
         <dataInicio>21/06</dataInicio>
